# f1tenth_amr

./: .gitignore  .gitmodules  Jetson-containers.md  README.md  hardwareList.md  pedro.urdf  rviz2.rviz  workflowSteps.md
.devcontainer/: Dockerfile  devcontainer.json
carlikeBot/description/gazebo/: gazebo_ackermann_drive.xml
carlikeBot/description/ros2_control/: ack_control.yaml
carlikeBot/description/urdf/: wheels.xacro
encoder/: encoder_velocity_control.ino
pedro_bot/: ack.config  ack.sdf  ackermann.urdf  deleteme.urdf  deleteme.urdf.xacro  gazebo_d435.urdf.xacro  macros.xacro  model.config  model.sdf  pedro.gazebo  pedro.sdf  pedro.urdf.xacro  pedrov2.sdf  pedrov2.urdf  scara.urdf.xacro
pedro_bot/archive/: pedro.urdf copy.xacro
pedro_bot/pedro_description/: pedro.urdf  pedrov2.urdf.xacro
pedro_description/: model.config  pedro.gazebo  pedro.urdf  pedro.urdf.xacro
pedro_description/gazebo_ros_demos-kinetic-devel/rrbot_description/urdf/: rrbot.xacro
ros_arduino_bridge-main/: README.md
ros_arduino_bridge-main/ROSArduinoBridge/: ROSArduinoBridge.ino  servos.h
src/A/: package.xml  setup.cfg  setup.py
src/A/a/: ear.py  talker.py
src/ackermann_steering_arduino/: CMakeLists.txt  package.xml
src/ackermann_steering_arduino/include/ackermann_steering_arduino/: arduino_comms.hpp
src/carlikeBot/: README.md
